--- a/package.json
+++ b/package.json
@@ -3,18 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.3",
+    "concurrently": "^8.2.2",
+    "dispatch": "^1.0.2",
+    "icons": "^1.0.0",
+    "json": "^11.0.0",
+    "json-server": "^1.0.0-alpha.23",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
+    "sass": "^1.77.8",
+    "server": "^1.0.39",
+    "swiper": "^11.1.9",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "server": "json-server --watch db.json --port 4444",
+    "dev": "concurrently \"npm run start\" \" npm run server\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
